src/objects/Product_Model__c.object
<CustomObject>
    <description>This is a custom object that will store the Product Model information.</description>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <label>Product Sub Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Product_Line__c</fullName>
        <label>Sub Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Product Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Sub_Product_Line__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Sub_Family__c</columns>
        <columns>Series__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>